--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     section {
       padding: 3rem 2rem;
       max-width: 1000px;
+      scroll-margin-top: 100px;
       margin: auto;
     }
     h2 {
