--- a/index.html
+++ b/index.html
@@ -231,6 +231,20 @@
   <footer>
     <p>&copy; 2025 Ahmad Kadri | Backend Architect Portfolio</p>
   </footer>
+  <script>
+  document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+      e.preventDefault();
+      const target = document.querySelector(this.getAttribute('href'));
+      if (target) {
+        const offset = 120; // ارتفاع الـ header أو أكثر قليلًا
+        const top = target.getBoundingClientRect().top + window.scrollY - offset;
+        window.scrollTo({ top, behavior: 'smooth' });
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
 
