--- a/index.html
+++ b/index.html
@@ -19,34 +19,67 @@
       background-color: #f4f4f4;
       color: #333;
     }
-    header {
-      background-color: #1e1e2f;
-      color: #fff;
-      padding: 1rem 0;
-      text-align: center;
-      position: sticky;
-      top: 0;
-      z-index: 999;
-    }
-    header h1 {
-      margin-bottom: 0.5rem;
-    }
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.3s ease;
-    }
-    nav ul li a:hover {
-      color: #00bcd4;
-    }
+   header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #1e1e2f;
+  color: white;
+  padding: 0.8rem 2rem;
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
+
+.header-left {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.header-left img {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid white;
+}
+
+.header-left .name-title {
+  display: flex;
+  flex-direction: column;
+  line-height: 1.2;
+}
+
+.header-left .name-title h1 {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.header-left .name-title span {
+  font-size: 0.85rem;
+  color: #ccc;
+}
+
+nav ul {
+  display: flex;
+  gap: 1.2rem;
+  list-style: none;
+  margin: 0;
+}
+
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+nav ul li a:hover {
+  color: #00ccff;
+}
+
     section {
       padding: 3rem 2rem;
       max-width: 1000px;
@@ -137,18 +170,24 @@
 </head>
 <body>
   <header>
-    <h1>Ahmad Kadri - Backend Architect</h1>
-    <img src="ahmad.jpg" alt="Ahmad Kadri Photo" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin-bottom: 1rem; border: 3px solid white;">
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="Ahmad_Kadri_CV.pdf" target="_blank" rel="noopener noreferrer">CV</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="header-left">
+    <img src="ahmad.jpg" alt="Ahmad Kadri" />
+    <div class="name-title">
+      <h1>Ahmad Kadri</h1>
+      <span>Backend Architect</span>
+    </div>
+  </div>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="Ahmad_Kadri_CV.pdf" target="_blank">CV</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
 
   <section id="about">
     <h2>About Me</h2>
