--- a/index.html
+++ b/index.html
@@ -79,56 +79,6 @@ nav ul li a {
 nav ul li a:hover {
   color: #00ccff;
 }
-    .header-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem 2rem;
-  flex-wrap: wrap;
-}
-
-.profile-img {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  object-fit: cover;
-  border: 2px solid white;
-}
-
-.nav-toggle {
-  display: none;
-  background: none;
-  border: none;
-  font-size: 1.8rem;
-  color: white;
-  cursor: pointer;
-}
-
-.nav-links {
-  display: flex;
-  gap: 1rem;
-  list-style: none;
-}
-
-@media (max-width: 768px) {
-  .nav-toggle {
-    display: block;
-  }
-
-  .nav-links {
-    flex-direction: column;
-    width: 100%;
-    display: none;
-    background-color: #1e1e2f;
-    margin-top: 1rem;
-    padding: 1rem;
-    border-radius: 8px;
-  }
-
-  .nav-links.active {
-    display: flex;
-  }
-}
 
 
     section {
@@ -221,24 +171,23 @@ nav ul li a:hover {
 </head>
 <body>
   <header>
-  <div class="header-container">
-    <img src="ahmad.jpg" alt="Ahmad Kadri" class="profile-img">
-    <h1>Ahmad Kadri - Backend Architect</h1>
-
-    <button class="nav-toggle" id="navToggle">☰</button>
-
-    <nav id="navbar">
-      <ul class="nav-links">
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="Ahmad_Kadri_CV.pdf" target="_blank">CV</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <div class="header-left">
+    <img src="ahmad.jpg" alt="Ahmad Kadri" />
+    <div class="name-title">
+      <h1>Ahmad Kadri</h1>
+      <span>Backend Architect</span>
+    </div>
   </div>
+  <nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="Ahmad_Kadri_CV.pdf" target="_blank">CV</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 </header>
-
 
 
   <section id="about">
@@ -322,16 +271,7 @@ nav ul li a:hover {
   <footer>
     <p>&copy; 2025 Ahmad Kadri | Backend Architect Portfolio</p>
   </footer>
-  <script>
-  const navToggle = document.getElementById("navToggle");
-  const navLinks = document.querySelector(".nav-links");
-
-  navToggle.addEventListener("click", () => {
-    navLinks.classList.toggle("active");
-  });
-</script>
-
-
+  
 </body>
 </html>
 
