--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@ nav ul li a:hover {
       </video>
 
       <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
+      <p>
+  <a class="project-link" 
+     href="https://gentle-exploration-production.up.railway.app" 
+     target="_blank" rel="noopener noreferrer"
+     style="text-decoration: none; color: green; font-weight: bold;">
+    🚀 Live Demo
+  </a>
+      </p>
     </div>
 
     <h3 style="margin-top: 2rem;">📸 Screenshots</h3>
