--- a/index.html
+++ b/index.html
@@ -220,6 +220,22 @@ nav ul li a:hover {
 
   <section id="projects">
     <h2>Projects</h2>
+    <div class="project" style="margin-top: 3rem;">
+  <h3>🛠️ Rizq Platform - Syrian Local Services Marketplace</h3>
+  <p>A full-stack web platform built to support local services and freelance job listings in Syria. It allows users to register, post services/jobs filtered by city and type, while admins manage registration approvals.</p>
+  <p><strong>Features:</strong> User registration with approval flow, role-based dashboard (Admin/User), JWT-based authentication stored in cookies, posting/editing/deleting listings, dynamic filtering by city and type, and responsive UI with Arabic support.</p>
+  <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, JWT, Thymeleaf, MySQL, Railway</p>
+
+  <p><a class="project-link" href="https://github.com/ahmadkadri978/rizq-platform" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
+  <p>
+    <a class="project-link" 
+       href="https://rizq-platform-production.up.railway.app" 
+       target="_blank" rel="noopener noreferrer"
+       style="text-decoration: none; color: green; font-weight: bold;">
+      🚀 Live Demo
+    </a>
+  </p>
+    </div>
 
     <div class="project">
       <h3>📚 Digital Library Management System</h3>
