--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ nav ul li a:hover {
     <div class="project" style="margin-top: 3rem;">
   <h3>🛠️ Rizq Platform - Syrian Local Services Marketplace</h3>
   <p>A full-stack web platform built to support local services and freelance job listings in Syria. It allows users to register, post services/jobs filtered by city and type, while admins manage registration approvals.</p>
-  <p><strong>Features:</strong> User registration with approval flow, role-based dashboard (Admin/User), JWT-based authentication stored in cookies, posting/editing/deleting listings, dynamic filtering by city and type, and responsive UI with Arabic support.</p>
+  <p><strong>Features:</strong> User registration with approval flow, role-based dashboard (Admin/User), JWT-based authentication stored in cookies, posting/editing/deleting listings, dynamic filtering by city and type, and responsive UI.</p>
   <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, JWT, Thymeleaf, MySQL, Railway</p>
 
   <p><a class="project-link" href="https://github.com/ahmadkadri978/rizq-platform" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
