--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ nav ul li a:hover {
     <p>Email: <a href="mailto:ahmadkadri@web.de">ahmadkadri@web.de</a></p>
     <p>GitHub: <a href="https://github.com/ahmadkadri978" target="_blank" rel="noopener noreferrer">github.com/ahmadkadri978</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/kadri-ahmad" target="_blank" rel="noopener noreferrer">linkedin.com/in/kadri-ahmad</a></p>
-    <p><a href="Ahmad_Kadri_CV.pdf" class="project-link" target="_blank" rel="noopener noreferrer">📄 Download My CV (PDF)</a></p>
+    <p><a href="Ahmad_kadri_Lebenslauf.pdf" class="project-link" target="_blank" rel="noopener noreferrer">📄 Download My CV (PDF)</a></p>
   </section>
 
   <footer>
