--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ nav ul li a:hover {
       <li><a href="#about">About</a></li>
       <li><a href="#skills">Skills</a></li>
       <li><a href="#projects">Projects</a></li>
-      <li><a href="Ahmad_Kadri_CV.pdf" target="_blank">CV</a></li>
+      <li><a href="Ahmad_kadri_Lebenslauf.pdf" target="_blank">CV</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
