--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ nav ul li a:hover {
   <p><a class="project-link" href="https://github.com/ahmadkadri978/rizq-platform" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
   <p>
     <a class="project-link" 
-       href="https://rizq-platform-production.up.railway.app" 
+       href="https://rizq-platform.onrender.com" 
        target="_blank" rel="noopener noreferrer"
        style="text-decoration: none; color: green; font-weight: bold;">
       🚀 Live Demo
@@ -249,12 +249,7 @@ nav ul li a:hover {
 
       <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
       <p>
-  <a class="project-link" 
-     href="https://gentle-exploration-production.up.railway.app" 
-     target="_blank" rel="noopener noreferrer"
-     style="text-decoration: none; color: green; font-weight: bold;">
-    🚀 Live Demo
-  </a>
+  
       </p>
     </div>
 
