--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ nav ul li a:hover {
   <section id="projects">
     <h2>Projects</h2>
     <div class="project" style="margin-top: 3rem;">
-  <h3>🛠️ Rizq Platform - Syrian Local Services Marketplace</h3>
-  <p>A full-stack web platform built to support local services and freelance job listings in Syria. It allows users to register, post services/jobs filtered by city and type, while admins manage registration approvals.</p>
+  <h3>🛠️ Rizq Platform - Local Services Marketplace</h3>
+  <p>A full-stack web platform built to support local services. It allows users to register, post services/jobs filtered by city and type, while admins manage registration approvals.</p>
   <p><strong>Features:</strong> User registration with approval flow, role-based dashboard (Admin/User), JWT-based authentication stored in cookies, posting/editing/deleting listings, dynamic filtering by city and type, and responsive UI.</p>
   <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, JWT, Thymeleaf, MySQL, Railway</p>
 
@@ -231,27 +231,36 @@ nav ul li a:hover {
     <a class="project-link" 
        href="https://rizq-platform.onrender.com" 
        target="_blank" rel="noopener noreferrer"
-       style="text-decoration: none; color: green; font-weight: bold;">
+       style="text-decoration: none; font-weight: bold;">
       🚀 Live Demo
     </a>
   </p>
     </div>
 
     <div class="project">
-      <h3>📚 Digital Library Management System</h3>
-      <p>A complete backend infrastructure project including Docker, AWS Fargate deployment, MySQL RDS, Load Balancer, and performance testing using JMeter.</p>
-      <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, OAuth2, Redis, Docker, AWS, MySQL, Apache JMeter</p>
-
-      <video controls>
-        <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
-        Your browser does not support the video tag.
-      </video>
-
-      <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
-      <p>
+  <h3>📚 Digital Library Management System</h3>
+  <p><strong>Designed and implemented</strong> a complete backend infrastructure for a digital library platform, focusing on scalability, security, and performance.</p>
   
-      </p>
-    </div>
+  <p><strong>Key Highlights:</strong></p>
+  <ul>
+    <li>Developed secure, role-based authentication with GitHub OAuth2.</li>
+    <li>Deployed on AWS Fargate with MySQL RDS and load balancing (later migrated to Railway for cost efficiency).</li>
+    <li>Implemented Redis caching to enhance performance.</li>
+    <li>Conducted performance testing using Apache JMeter.</li>
+  </ul>
+
+  <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, OAuth2, Redis, Docker, AWS, MySQL, Apache JMeter</p>
+
+  <video controls>
+    <source src="https://www.dropbox.com/scl/fi/j7or1sax2p200mx3tw4o3/Digital-Library-Management-System.mp4?rlkey=gn816tm9nkz8oeaws0x9d6w5u&st=a2ovgjum&dl=1" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <p><em>Status:</em> Currently available for <strong>local setup</strong> via Docker Compose — full source code on GitHub.</p>
+
+  <p><a class="project-link" href="https://github.com/ahmadkadri978/Digital-Library-Management-System" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
+</div>
+
 
     <h3 style="margin-top: 2rem;">📸 Screenshots</h3>
     <div class="screenshots-grid">
@@ -293,6 +302,7 @@ nav ul li a:hover {
   
 </body>
 </html>
+
 
 
 
