--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@ nav ul li a:hover {
       <li>JPA / Hibernate</li>
       <li>Swagger</li>
       <li>JMeter</li>
-      <li>CI/CD (GitHub Actions)</li>
-      <li>Unit Testing (JUnit)</li>
-      <li>Integration Testing (MockMvc)</li>
+      <li>CI/CD </li>
+      <li>Unit Testing </li>
+      <li>Integration Testing </li>
       <li>Redis Caching</li>
       <li>Thymeleaf</li>
     </ul>
@@ -224,7 +224,7 @@ nav ul li a:hover {
   <h3>🛠️ Rizq Platform - Local Services Marketplace</h3>
   <p>A full-stack web platform built to support local services. It allows users to register, post services/jobs filtered by city and type, while admins manage registration approvals.</p>
   <p><strong>Features:</strong> User registration with approval flow, role-based dashboard (Admin/User), JWT-based authentication stored in cookies, posting/editing/deleting listings, dynamic filtering by city and type, and responsive UI.</p>
-  <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, JWT, Thymeleaf, MySQL, Railway</p>
+  <p><strong>Tech Stack:</strong> Spring Boot, Spring Security, JWT, Thymeleaf, PostgreSQL, Platform as a service(paas)</p>
 
   <p><a class="project-link" href="https://github.com/ahmadkadri978/rizq-platform" target="_blank" rel="noopener noreferrer">🔗 View Source Code on GitHub</a></p>
   <p>
@@ -292,6 +292,7 @@ nav ul li a:hover {
   
 </body>
 </html>
+
 
 
 
